--- a/style/main.css
+++ b/style/main.css
@@ -4,6 +4,11 @@
   display: flex;
   border-right: 1px solid grey;
 }
+@media screen and (max-width: 1279px) {
+  .aside-menu {
+    width: 10%;
+  }
+}
 
 .navigation {
   display: flex;
@@ -23,8 +28,13 @@
 }
 .navigation .navigation-list li {
   color: white;
-  padding-bottom: 1.3em;
+  margin-bottom: 1.3em;
   font-size: 1.2em;
+  cursor: pointer;
+}
+.navigation .navigation-list li:hover {
+  color: #00BFFF;
+  transition: 0.7s;
 }
 .navigation .navigation-list li i {
   padding-right: 20px;
@@ -46,10 +56,29 @@
   text-decoration: none;
   text-align: center;
 }
+.navigation .btn-tweetar .tela-mobile {
+  display: none;
+}
+@media screen and (max-width: 1279px) {
+  .navigation .mobile-span {
+    display: none;
+  }
+  .navigation .btn-tweetar {
+    border-radius: 50px;
+    padding: 10px;
+  }
+  .navigation .btn-tweetar .tela-mobile {
+    display: block;
+  }
+  .navigation .btn-tweetar .tela-pc {
+    display: none;
+  }
+}
 
 * {
   margin: 0;
   box-sizing: border-box;
+  font-family: "Roboto", sans-serif;
 }
 
 html {
