--- a/style/main.css
+++ b/style/main.css
@@ -86,4 +86,74 @@ html {
   background: #15202b;
 }
 
+#principal-page {
+  display: flex;
+  justify-content: space-between;
+}
+
+.aside-menu-right {
+  width: 30%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border-left: 1px solid grey;
+}
+@media screen and (max-width: 1038px) {
+  .aside-menu-right {
+    display: none;
+  }
+}
+
+.campo-busca {
+  margin-top: 10px;
+}
+.campo-busca .input-pesquisa {
+  width: 300px;
+  padding: 10px;
+  border-radius: 20px;
+  background: transparent;
+  border: 1px solid grey;
+  color: white;
+  outline: 0;
+}
+
+.noticias-diarias {
+  margin-top: 20px;
+  display: flex;
+  flex-direction: column;
+  width: 90%;
+  background: rgba(255, 255, 255, 0.1);
+  border-radius: 20px;
+  color: white;
+}
+.noticias-diarias .title {
+  font-weight: bold;
+  text-align: center;
+  padding-top: 1em;
+  padding-bottom: 1em;
+  border-bottom: 1px solid grey;
+}
+.noticias-diarias .noticia {
+  padding-top: 1em;
+  padding-bottom: 1em;
+  padding-left: 1em;
+  border-bottom: 1px solid grey;
+}
+.noticias-diarias .noticia p {
+  color: grey;
+}
+.noticias-diarias .noticia p:nth-child(1) {
+  padding-bottom: 10px;
+}
+.noticias-diarias .noticia p:nth-child(3) {
+  padding-top: 10px;
+}
+.noticias-diarias .noticia:last-child {
+  color: #00BFFF;
+  text-align: center;
+  border: none;
+  cursor: pointer;
+}
+
 /*# sourceMappingURL=main.css.map */
