--- a/sass/menu-lateral-left.scss
+++ b/sass/menu-lateral-left.scss
@@ -1,7 +1,7 @@
 @import './variables.scss';
 
 .aside-menu {
-    width: 20%;
+    width: 35%;
     height: 100vh;
     display: flex;
     border-right: 1px solid grey;
@@ -72,6 +72,9 @@
     }
 
     @media screen and (max-width: 1279px) {
+        padding-left: 10px;
+        padding-top: 10px;
+
         .mobile-span {
             display: none;
         }
