--- a/sass/style.scss
+++ b/sass/style.scss
@@ -2,3 +2,93 @@
 @import './variables.scss';
 @import './geral.scss';
 @import './menu-lateral-right.scss';
+
+.main-container {
+    width: 60%;
+
+    @media screen and (max-width: 1038px) {
+        width: 90%;
+    }
+}
+
+.topo-main {
+    padding: 20px;
+    color: $color-itens-menu;
+    border-bottom: 1px solid grey;
+    font-size: 0.6em;
+    display: flex;
+    justify-content: space-between;
+
+    i {
+        font-size: 2.5em;
+    }
+}
+
+.escrever-tweet {
+    display: flex;
+    align-items: center;
+    padding-bottom: 1em;
+    border-bottom: 3px solid grey;
+
+    .foto-user {
+        margin-left: 1em;
+        width: 50px;
+        border-radius: 50%;
+        margin-bottom: 2em;
+    }
+
+}
+
+.tweetar {
+    .input-tweetar {
+        outline: 0;
+        background: transparent;
+        border: none;
+        width: 500px;
+        padding: 25px;
+        color: $color-itens-menu;
+    }
+
+    p {
+        color: $background-buttom;
+        margin-left: 20px;
+        font-size: 0.9em;
+        font-weight: bold;
+        font-size: 1em;
+    }
+
+    i {
+        margin-right: 5px;
+    }
+}
+
+.buttom-menu {
+    display: flex;
+    justify-content: space-between;
+
+    .list-tweet {
+        list-style: none;
+        align-items: center;
+        padding: 0;
+        display: flex;
+        margin-left: 20px;
+        margin-top: 10px;
+    }
+
+    .list-tweet li {
+        color: $background-buttom;
+        padding-right: 10px;
+        font-size: 1.1em;
+    }
+
+    .btn-enviar {
+        background: $background-buttom;
+        border: none;
+        color: white;
+        padding: 10px 20px;
+        border-radius: 20px;
+        outline: 0;
+        cursor: pointer;
+        margin-right: 10px;
+    }
+}
