--- a/style/main.css
+++ b/style/main.css
@@ -1,5 +1,5 @@
 .aside-menu {
-  width: 20%;
+  width: 35%;
   height: 100vh;
   display: flex;
   border-right: 1px solid grey;
@@ -61,6 +61,10 @@
   display: none;
 }
 @media screen and (max-width: 1279px) {
+  .navigation {
+    padding-left: 10px;
+    padding-top: 10px;
+  }
   .navigation .mobile-span {
     display: none;
   }
@@ -92,7 +96,7 @@ html {
 }
 
 .aside-menu-right {
-  width: 30%;
+  width: 40%;
   height: 100vh;
   display: flex;
   flex-direction: column;
@@ -154,6 +158,87 @@ html {
   text-align: center;
   border: none;
   cursor: pointer;
+}
+
+.main-container {
+  width: 60%;
+}
+@media screen and (max-width: 1038px) {
+  .main-container {
+    width: 90%;
+  }
+}
+
+.topo-main {
+  padding: 20px;
+  color: white;
+  border-bottom: 1px solid grey;
+  font-size: 0.6em;
+  display: flex;
+  justify-content: space-between;
+}
+.topo-main i {
+  font-size: 2.5em;
+}
+
+.escrever-tweet {
+  display: flex;
+  align-items: center;
+  padding-bottom: 1em;
+  border-bottom: 3px solid grey;
+}
+.escrever-tweet .foto-user {
+  margin-left: 1em;
+  width: 50px;
+  border-radius: 50%;
+  margin-bottom: 2em;
+}
+
+.tweetar .input-tweetar {
+  outline: 0;
+  background: transparent;
+  border: none;
+  width: 500px;
+  padding: 25px;
+  color: white;
+}
+.tweetar p {
+  color: #1da1f2;
+  margin-left: 20px;
+  font-size: 0.9em;
+  font-weight: bold;
+  font-size: 1em;
+}
+.tweetar i {
+  margin-right: 5px;
+}
+
+.buttom-menu {
+  display: flex;
+  justify-content: space-between;
+}
+.buttom-menu .list-tweet {
+  list-style: none;
+  align-items: center;
+  padding: 0;
+  display: flex;
+  margin-left: 20px;
+  margin-top: 10px;
+}
+.buttom-menu .list-tweet li {
+  color: #1da1f2;
+  padding-right: 10px;
+  font-size: 1.1em;
+}
+.buttom-menu .btn-enviar {
+  background: #1da1f2;
+  border: none;
+  color: white;
+  padding: 10px 20px;
+  border-radius: 20px;
+  outline: 0;
+  cursor: pointer;
+  margin-right: 10px;
 }
 
 /*# sourceMappingURL=main.css.map */
