--- a/sass/variables.scss
+++ b/sass/variables.scss
@@ -2,3 +2,4 @@ $background-site:rgb(21, 32, 43);
 $background-buttom: rgb(29, 161, 242);
 $fonts: 'Roboto', sans-serif;
 $color-itens-menu: white;
+$foto-tweet: 50px;
