--- a/sass/geral.scss
+++ b/sass/geral.scss
@@ -12,3 +12,10 @@ html {
     display: flex;
     justify-content: space-between;
 }
+
+.foto-tweet {
+    width: $foto-tweet;
+    border-radius: 50%;
+    margin-left: 1em;
+    margin-top: 1em;
+}
