--- a/sass/menu-bottom.scss
+++ b/sass/menu-bottom.scss
@@ -12,6 +12,27 @@
         margin-top: 3em;
     }
 
+    .btn-tweetar {
+        background: $background-buttom;
+        padding: 10px 50px;
+        border-radius: 20px;
+        color: white;
+        text-decoration: none;
+        text-align: center;
+        border-radius: 50px;
+        padding: 15px;
+        position: absolute;
+        right: 30px;
+        bottom: 60px;
+    }
+
+    .btn-tweetar .tela-pc {
+        display: none;
+    }
+
+    .btn-tweetar .tela-mobile {
+        display: blolck;
+    }
 }
 
 .menu-list-bottom {
