--- a/style/main.css
+++ b/style/main.css
@@ -187,6 +187,25 @@ html {
     margin-top: 3em;
   }
 }
+.menu-bottom .btn-tweetar {
+  background: #1da1f2;
+  padding: 10px 50px;
+  border-radius: 20px;
+  color: white;
+  text-decoration: none;
+  text-align: center;
+  border-radius: 50px;
+  padding: 15px;
+  position: absolute;
+  right: 30px;
+  bottom: 60px;
+}
+.menu-bottom .btn-tweetar .tela-pc {
+  display: none;
+}
+.menu-bottom .btn-tweetar .tela-mobile {
+  display: blolck;
+}
 
 .menu-list-bottom {
   color: white;
@@ -197,11 +216,11 @@ html {
 }
 
 .main-container {
-  width: 60%;
+  width: auto;
 }
 @media screen and (max-width: 1038px) {
   .main-container {
-    width: 90%;
+    width: 100%;
   }
 }
 
@@ -236,6 +255,9 @@ html {
   }
 }
 
+.tweetar {
+  width: 100%;
+}
 .tweetar .input-tweetar {
   outline: 0;
   background: transparent;
