Corrigido alguns bug e readme alterado

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -47,12 +47,12 @@
 
 .tweetar {
     width: 100%;
-    
+
     .input-tweetar {
         outline: 0;
         background: transparent;
         border: none;
-        width: 500px;
+        width: 100%;
         padding: 25px;
         color: $color-itens-menu;
     }
