--- a/style/main.css
+++ b/style/main.css
@@ -262,7 +262,7 @@ html {
   outline: 0;
   background: transparent;
   border: none;
-  width: 500px;
+  width: 100%;
   padding: 25px;
   color: white;
 }
