Corrigida falha do menu

--- a/sass/menu-bottom.scss
+++ b/sass/menu-bottom.scss
@@ -10,6 +10,8 @@
         padding: 10px;
         border-top: 1px solid grey;
         margin-top: 3em;
+        background: $background-site;
+        z-index: 1;
     }
 
     .btn-tweetar {
