--- a/style/main.css
+++ b/style/main.css
@@ -185,6 +185,8 @@ html {
     padding: 10px;
     border-top: 1px solid grey;
     margin-top: 3em;
+    background: #15202b;
+    z-index: 1;
   }
 }
 .menu-bottom .btn-tweetar {
